--- a/chat-oc/package.json
+++ b/chat-oc/package.json
@@ -57,6 +57,7 @@
     "@types/color": "3.0.3",
     "@types/react": "18.0.37",
     "@typescript-eslint/parser": "^5.59.0",
+    "axios": "^1.4.0",
     "babel-loader": "9.1.2",
     "color": "4.2.3",
     "date-fns": "^2.30.0",
@@ -72,7 +73,9 @@
     "react-dom": "18.2.0",
     "react-i18next": "12.2.0",
     "typescript": "5.0.4",
-    "vitest": "0.30.1",
-    "axios": "^1.4.0"
+    "vitest": "0.30.1"
+  },
+  "dependencies": {
+    "openai": "^3.3.0"
   }
 }
